--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,30 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
-  "features": {
-    "ghcr.io/devcontainers/features/desktop-lite:1": {}
+  "name": "DevContainer",
+  "build": {
+    "dockerfile": "Dockerfile"
   },
-  "forwardPorts": [6080],
-  "portsAttributes": {
-    "6080": {
-      "label": "desktop"
+  "runArgs": ["--init"],
+  "forwardPorts": [5900, 6080],
+  "postCreateCommand": "npm install",
+  "remoteUser": "node",
+  "remoteEnv": {
+    "DISPLAY": ":0"
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "ms-vscode.vscode-typescript-next",
+        "ms-azuretools.vscode-docker",
+        "angular.ng-template",
+        "dbaeumer.vscode-eslint",
+        "github.copilot",
+        "eamodio.gitlens",
+        "bmewburn.vscode-intelephense-client",
+        "github.vscode-pull-request-github"
+      ],
+      "settings": {
+        "terminal.integrated.shell.linux": "/bin/bash"
+      }
     }
   }
 }
