improved development environment setup

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,3 +3,6 @@ FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:20-bullseye
 
 # Set Up
 RUN apt-get update && apt-get install -y
+
+# Install php
+RUN apt-get install -y php
