--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,36 @@
+# Compiled output
+dist
+tmp
+out
+out-tsc
+bazel-out
+
+# Node
 node_modules
-.vscode
+npm-debug.log
+yarn-error.log
+
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Miscellaneous
+config.php
+
+# System files
+.DS_Store
+Thumbs.db
+*.log*
