--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,3 +3,9 @@ FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:20-bullseye
 
 # Set Up
 RUN apt-get update && apt-get install -y
+
+# Install php
+RUN apt-get install -y php
+
+# Install firefox
+RUN apt-get install -y firefox-esr
