--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.5",
     "svelte": "^4.2.18",
+    "svelte-routing": "^2.13.0",
     "vite": "^5.3.1"
   }
 }
