--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "autoprefixer": "^10.4.20",
     "electron": "^31.0.2",
     "electron-builder": "^24.13.3",
+    "electron-devtools-installer": "^3.2.0",
     "electron-vite": "^2.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-svelte": "^2.41.0",
@@ -40,7 +41,6 @@
     "prettier-plugin-svelte": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "svelte": "^4.2.18",
-    "svelte-routing": "^2.13.0",
     "tailwindcss": "^3.4.9",
     "vite": "^5.3.1"
   }
