--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "frontend",
+  "name": "mijnrooster-client",
   "version": "1.0.0",
   "description": "An Electron application with Svelte",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "author": "David Jongeneel, Reinout Muis, Jonathan van der Pligt",
   "scripts": {
     "format": "prettier --plugin prettier-plugin-svelte --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
