--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "frontend",
+  "name": "mijnrooster-client",
   "version": "1.0.0",
   "description": "An Electron application with Svelte",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "author": "David Jongeneel, Reinout Muis, Jonathan van der Pligt",
   "scripts": {
     "format": "prettier --plugin prettier-plugin-svelte --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
@@ -30,6 +29,7 @@
     "autoprefixer": "^10.4.20",
     "electron": "^31.0.2",
     "electron-builder": "^24.13.3",
+    "electron-devtools-installer": "^3.2.0",
     "electron-vite": "^2.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-svelte": "^2.41.0",
@@ -40,7 +40,6 @@
     "prettier-plugin-svelte": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "svelte": "^4.2.18",
-    "svelte-routing": "^2.13.0",
     "tailwindcss": "^3.4.9",
     "vite": "^5.3.1"
   }
