#9 Implement Zermelo API in the backend (#18)
* Minor changes

* Added appointment and student model

* Refactor code

* Critical: config with token stored in repo

* Work in progress

* Refactor code structure

* Refactor code structure and created functional schedule and studentdata controller

* Critical fix: config with token stored in repo

* Add some documentation

--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,11 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
-# Miscellaneous
-config.php
-
 # System files
 .DS_Store
 Thumbs.db
 *.log*
+
+# Config files
+backend/src/config/config.php
+
