Update GitHub Actions workflow to trigger only on main or master branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,13 @@
-on: push
+on:
+  push:
+    branches:
+      - main
+      - master
 name: 🚀 Deploy API to 545959.leerlingsites.nl/pws/api
 jobs:
   web-deploy:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v4
