--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - name: 🚚 Get latest code
       uses: actions/checkout@v4
     
-    - name: 📂 Sync files
+    - name: 📂 Sync api files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
         server: 545959.leerlingsites.nl
@@ -20,3 +20,13 @@ jobs:
         server-dir: /domains/545959.leerlingsites.nl/public_html/pws/api/
         local-dir: ./backend/src/
         password: ${{ secrets.ftp_password }}
+
+    - name: 📂 Sync doc files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+      with:
+        server: 545959.leerlingsites.nl
+        username: g545959
+        server-dir: /domains/545959.leerlingsites.nl/public_html/pws/api-docs/
+        local-dir: ./backend/docs/
+        password: ${{ secrets.ftp_password }}
+    
