--- a/frontend/electron-builder.yml
+++ b/frontend/electron-builder.yml
@@ -1,5 +1,6 @@
 appId: nl.mijnrooster.client
 productName: Mijn Rooster
+homepage: https://github.com/Mijn-Rooster/mijnrooster
 directories:
   buildResources: build
 files:
@@ -38,7 +39,8 @@ appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
 publish:
-  provider: generic
-  url: https://example.com/auto-updates
+  provider: github
+  owner: Mijn-Rooster
+  repo: mijnrooster
 electronDownload:
   mirror: https://npmmirror.com/mirrors/electron/
