--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mijnrooster-client",
   "version": "1.0.0",
-  "description": "An Electron application with Svelte",
+  "description": "Mijn Rooster is een kiosk-applicatie voor het tonen van roosters op schermen.",
   "main": "./out/main/index.js",
   "author": "David Jongeneel, Reinout Muis, Jonathan van der Pligt",
   "scripts": {
