Update app update provider to GitHub for automatic updates

--- a/frontend/dev-app-update.yml
+++ b/frontend/dev-app-update.yml
@@ -1,3 +1,5 @@
-provider: generic
-url: https://example.com/auto-updates
-updaterCacheDirName: frontend-updater
+provider: github
+owner: Mijn-Rooster
+repo: mijnrooster
+updaterCacheDirName: mijnrooster-updater
+releaseType: release
