--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,11 @@
-name: Build/release
+name: Build and Release Electron App
 
 on:
-    push:
-        branches: [main]
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   release:
@@ -14,23 +17,20 @@ jobs:
 
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
 
-      - name: Install Node.js, NPM and Yarn
-        uses: actions/setup-node@v1
+      - name: Install Node.js, NPM, and Yarn
+        uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: "yarn"
 
-      - name: Build/release Electron app
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Build and Release Electron App
         uses: samuelmeuli/action-electron-builder@v1.6.0
         with:
-          # GitHub token, automatically provided to the action
-          # (No need to define this secret in the repo settings)
-          github_token: ${{ secrets.github_token }}
-
-          # If the commit is tagged with a version (e.g. "v1.0.0"),
-          # release the app after building
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-
-          # The directory that contains electron application
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          release: true
           package_root: frontend
