--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,19 @@ jobs:
       - name: Install Node.js, NPM, and Yarn
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
+
+      - name: Install snapcraft (Ubuntu only)
+        if: runner.os == 'Linux'
+        run: sudo snap install snapcraft --classic
+
+      - name: Install dependencies (Ubuntu only)
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y libarchive-tools
 
       - name: Build and Release Electron App
         uses: samuelmeuli/action-electron-builder@v1.6.0
         with:
           github_token: ${{ secrets.RELEASE_PAT }}
-          release: true
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
           package_root: frontend
