Update electron-builder.yml to support multiple ARM architectures in Linux target

--- a/frontend/electron-builder.yml
+++ b/frontend/electron-builder.yml
@@ -30,8 +30,10 @@ dmg:
 linux:
   target:
     - AppImage
-    - deb
-    - linux-armv7l
+    - target: deb
+      arch: 
+        - armv7l
+        - arm64
   maintainer: electronjs.org
   category: Utility
 appImage:
