--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mijnrooster-client",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Mijn Rooster is een kiosk-applicatie voor het tonen van roosters op schermen",
   "main": "./out/main/index.js",
   "author": "David Jongeneel, Reinout Muis, Jonathan van der Pligt",
@@ -29,19 +29,20 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.20",
-    "electron": "^31.6.0",
+    "electron": "^31.7.7",
     "electron-builder": "^24.13.3",
     "electron-devtools-installer": "^3.2.0",
     "electron-vite": "^2.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-svelte": "^2.44.0",
     "flowbite": "^2.5.1",
-    "flowbite-svelte": "^0.46.16",
-    "flowbite-svelte-icons": "^1.6.1",
+    "flowbite-svelte": "^0.46.23",
+    "flowbite-svelte-icons": "^1.6.2",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "svelte": "^4.2.19",
+    "svelte-google-materialdesign-icons": "^1.0.5",
     "tailwindcss": "^3.4.11",
     "vite": "^5.4.14"
   }
