--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,12 +1,7 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
-
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/frontend" # Location of package manifests
+  - package-ecosystem: "npm"
+    directory: "/frontend"
     schedule:
       interval: "weekly"
     groups:
@@ -14,8 +9,11 @@ updates:
         dependency-type: "production"
       development-dependencies:
         dependency-type: "development"
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/backend" # Location of package manifests
+    ignore:
+      - dependency-name: "svelte"
+        versions: [">=5.0.0"]
+  - package-ecosystem: "npm"
+    directory: "/backend"
     schedule:
       interval: "weekly"
     groups:
