--- a/frontend/electron-builder.yml
+++ b/frontend/electron-builder.yml
@@ -35,7 +35,7 @@ linux:
         - armv7l
         - arm64
   maintainer: electronjs.org
-  category: Utility
+  category: Education
 appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
