--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "@esm2cjs/is-online": "^10.0.0",
+    "auto-launch": "^5.0.6",
     "electron-log": "^5.3.0",
     "electron-updater": "^6.3.4"
   },
